app/templates/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issue-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.oblivion.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              number: 80
