app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issue-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.oblivion.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: testapp
            port:
              number: 800
