app/templates/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: redis.oblivion.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: redis-svc
            port:
              number: 6379
